@@ -31,8 +31,6 @@ __module_autor__ = "GatoLoko"
 # Cargamos las librerias y funciones que necesitamos
 import xchat
 import re
-from os import path
-import sqlite3
 import auxiliar
 
 #############################################################################
@@ -40,32 +38,24 @@ import auxiliar
 # opcionales.
 #############################################################################
 
-_SCRIPTDIR = xchat.get_info("xchatdir")
-_GATODIR = _SCRIPTDIR + "/gatoscript/"
-_GATODB_PATH = _GATODIR + "gatoscript.db"
-_FILTROS_PATH = _GATODIR + "antispam.conf"
-_HOME = path.expanduser("~")
 
 #############################################################################
 # Inicializamos el modulo
 #############################################################################
-# Conectamos a la base de datos
-if path.exists(_GATODB_PATH):
-    CONEXIONDB = sqlite3.connect(_GATODB_PATH)
-    CURSOR = CONEXIONDB.cursor()
-    _CONECTADO = 1
-else:
-    _CONECTADO = 0
-# Cargamos la lista de filtros para el antispam
-if _CONECTADO == 1:
+# Cargamos la lista de filtros para el antispam y compilamos las regexps
+if auxiliar.CONECTADO == 1:
     ANTISPAM = 1
-    if auxiliar.lee_conf("protecciones", "spambots") == "1":
-        SPAMBOTS = 1
+    SPAMBOTS = int(auxiliar.lee_conf("protecciones", "spambots"))
+    filtros = auxiliar.gatodb_cursor_execute("SELECT filtro FROM filtros")
+    compilados = []
+    for filtro in filtros:
+        compilados.append(re.compile(".*" + filtro[0] + ".*", re.IGNORECASE))
 else:
-    print("No se puede cargar la lista de filtros, AntiSpam desactivado")
+    print("AntiSpam esta desactivado o no se puede cargar la lista de filtros")
     ANTISPAM = 0
     SPAMBOTS = 0
 
+#prueba = re.compile("FREE FREE!! Don't Register , Don't Money Only Click Here =>|Full teen girls|Girlss\.tr\.cx|Hard & teens|http://adult\.edu\.tc|Http://AduLts\.eu\.tp|Http://Beklenen\.Net|Http://downloads\.fr\.mn|Http://Movies\.jp\.tp|http://nehirim\.net/freemoney\.htm|http://tamer\.us\.pn|http://www\.dartanyan\.net/girls\.exe|http://www\.seker\.net\.ms|Http://www\.sexymovies\.tr\.cx|naked from msn|p0rn|pornstar|realcoder\.net|sexgirl\.tc\.gs|sexigirls\.it|Simge\.tk|SizinAlem\.Net|sonia21\.firez\.org|www\.belesvideo\.ne|\www\.guapa\.now\.nu|WWW\.LOVEORHONEY\.COM|WWW\.LOVEORLOVE\.COM|You Win To For Money|bahanem\.org|grupsgirl\.net|porno\.exe|bestupload|analtime\.us\.pn|www\.moviesus\.net|hot-teens\.such\.info|/teengirl\.|Http://AduLt\.tc\.vg|pikolata|NAZ\.tr\.cx|free girls|KralHack\.cjb\.net|Free porno|Http://hanibana\.net|http://Moviesus\.net|http://lolita\.dd\.am|Moviesus\.net|bulusturma|Sunucumuz sohbete|olita\.dd\.am|kizadresleri\.bulunur\.com|v1rg1n|g1rl|http://sexhouse\.dd\.am|Bedava filim|Http://pikoLata\.net|video\.exe|Annelerinizi|www\.LIGUEYA\.COM|gelmeyenin|KnightonLine\.exe|AduLt\.es\.tp|http://arzuLu|http://mitglied\.lycos\.de|PikoLata|lolita\.exe|kirazLi|Sende indir izle|En cok oLduqu|F-ree P-orno V-ideo|Double ClicK|manymany|virgin girl|superkizmsnleri|hersey Burda|supernacho|www\.suskun\.net|free-movie-mpeg\.exe|http://www\.camlisex\.com|karagece|rap-fm|free adult|qelsin Bari|xicasendirecto|www\.mamellas\.com|maria1cam|\?santos|Miraquegolfas|gracia_lagolosa|erotikam|www\.doreag\.es|asdgo\.com|consupermiso\.com|www\.slordjp\.tk|www\.tuylostuyos\.com|traviesas_mv88|yamile_mb87|koonymara|jesica_sexy_amor|www\.geocities\.com/octubre122005|www\.dominiosteca\.biz|es-facil.com/ganar|WWW\.ELECTRIKSOUND\.COM|www\.fororelax\.net|www\.shateros\.com|www\.chaterosforever\.com|neverendingnovel\.wordpress\.com|criticonomicon\.wordpress\.com|crazyvideos\.zapto\.org|youtube\.com/mryorx|myminicity\.es|nokia n73|lasegundapuerta\.com|www\.myspace\.com/joaquinbello|www\.ircap\.es|\@hotmail\.com|www\.proteinasyfitness\.com|WWW\.SERIALCRACK\.ES|suellencastillo|UnVoto\.asp|mileurazos\.es\.tl|web/mviiiax|anhely_cielo|yorxpatri|www\.antitaurino\.org|midmind|usadastangas|carolina-cerezuela|lordserer|WWW\.CHEO\.HAZBLOG\.COM|moccia|jordiponsi|tuatubolayyoalamia\.blogspot\.com|AGREGAME AMI KORREO|calientita_sexyxcam|quelocochat\.com|morenita_cam_luciax|#m7x0|www\.13mensistas\.com|WWW\.MISECRETITO\.COM\.AR|loscirculosviciosos\.blogspot\.com|esohavuelto\.blogspot\.com|www\.darkzone\.ar\.kz|esohavuelto|usuarios\.lycos\.es/girasfotos|numberone\.foroactivo\.net|slordjp|nutricionysalud3000|messagemagic|hombres-maltratados|acceso-virtual|WWW\.NEWSTD\.COM\.AR|CONTACTOS REALES|diabulusradio|agregame.*hotmail\.com|paiporta\.creatuforo\.com|tiasjuguetonas\.com|chatrd\.net|xag-mamporros|diariodeoriente|rincondeleuro|LA LL!!|primigratis|gandisex|contactoreal\.tk|trinityatierra\.wordpress\.com|canaltravestis|samburinya\.blogspot\.com|www\.tuloarreglas\.com|http.elbruto\.es|verme por webcam, sin tener que mandar .* sms .*|www\.elotrolado\.net/foro_xbox-360_137|www\.masmediamail\.com/durarealidad/|www\.readysoft\.es|zebal|ganadinerocon|contactos\.esmiweb\.com|kedar\.es|chatdeligar\.com|www\.chatconvideo\.com|caramelito\.xbox-site\.info", re.IGNORECASE)
 
 #############################################################################
 # Definimos las funciones de uso interno en el modulo
@@ -82,10 +72,15 @@ def antispam_reload():
     # funcionamiento del modulo completo
     global ANTISPAM
     global SPAMBOTS
-    if _CONECTADO == 1:
+    if auxiliar.CONECTADO == 1:
         ANTISPAM = 1
-        if auxiliar.lee_conf("protecciones", "spambots") == "1":
-            SPAMBOTS = 1
+        SPAMBOTS = int(auxiliar.lee_conf("protecciones", "spambots"))
+        # Cargamos la nueva lista de filtros y compilamos las regexps
+        filtros = auxiliar.gatodb_cursor_execute("SELECT filtro FROM filtros")
+        compilados = []
+        for filtro in filtros:
+            compilados.append(re.compile(".*" + filtro[0] + ".*", \
+                                         re.IGNORECASE))
     else:
         auxiliar.gprint("No se pueden cargar los filtros, AntiSpam desactivado")
         ANTISPAM = 0
@@ -105,43 +100,40 @@ def antispam_cb(word, word_eol, userdata):
     word_eol -- array de cadenas que envia xchat a cada hook
     userdata -- variable opcional que se puede enviar a un hook (ignorado)
     """
-    filtros = CURSOR.execute("SELECT filtro FROM filtros")
     if auxiliar.lee_conf("protecciones", "spam") == "1":
-        #chanspam = auxiliar.lee_conf("protecciones", "chanspam").split(",")
-        #for i in range(len(chanspam)):
-            #if word_eol[3].find(chanspam[i]) > 0:
-        for filtro in filtros:
-            spam_exp = re.compile(".*" + filtro[0] + ".*", re.IGNORECASE)
+        for spam_exp in compilados:
             if (spam_exp.search(word_eol[3][1:])):
                 ban = "1"
-                mensaje = " Spam"
+                mensaje = " Spam/Troll"
                 auxiliar.expulsa(mensaje, ban, word)
-    # Si esta activada la gestion de bots spammers...
-    if SPAMBOTS == 1:
-        # Comprobamos si el mensaje se ha recibido en un privado o en alguno
-        # de nuestros canales protegidos
-        if (word[2] in CURSOR.execute("SELECT canales FROM canales")) or \
-                (word[2] == xchat.get_info("nick")):
+    # Comprobamos si el mensaje se ha recibido en un privado o en alguno de
+    # nuestros canales protegidos
+    canales = auxiliar.gatodb_cursor_execute("SELECT canales FROM canales")
+    if (word[2] in canales) or (word[2] == xchat.get_info("nick")):
+        # Si esta activada la gestion de bots spammers...
+        if SPAMBOTS == 1:
             # Si es asi, comprobamos si el mensaje contiene spam
-            for filtro in filtros:
-                spam_exp = re.compile(".*" + filtro[0] + ".*", re.IGNORECASE)
+            for spam_exp in compilados:
                 if (spam_exp.search(word_eol[3][1:])):
                     # Si contiene spam, expulsamos al bot responsable
                     auxiliar.expulsa(" Bot spammer", "1", word)
                     # Y quitamos su nick de la lista de niños buenos
                     nick = word[0].split("!")[0].split(":")[1]
-                    if nick in CURSOR.execute("SELECT goodboy FROM goodboys"):
-                        CURSOR.execute("DELETE FROM goodboys WHERE goodboy \
+                    if nick in auxiliar.gatodb_cursor_execute("SELECT goodboy FROM goodboys"):
+                        auxiliar.gatodb_cursor_execute("DELETE FROM goodboys WHERE goodboy \
                             IN (?)", (nick,))
-                        CONEXIONDB.commit()
-    # Comprobamos si esta activada la funcion anti spam
-    if (ANTISPAM == 1):
-        # Si esta activada, comprobamos si el texto recibido contiene spam y
-        # si es asi, ignoramos la linea      
-        for filtro in filtros: 
-            spam_exp = re.compile(".*" + filtro[0] + ".*", re.IGNORECASE)
-            if (spam_exp.search(word_eol[3][1:])):
-                return xchat.EAT_ALL
+                        auxiliar.gatodb_commit()
+                    if word[2] in canales:
+                        ban = "1"
+                        mensaje = " Spam"
+                        auxiliar.expulsa(mensaje, ban, word)
+        # Comprobamos si esta activada la funcion anti spam
+        if ANTISPAM == 1:
+            # Si esta activada, comprobamos si el texto recibido contiene spam y
+            # si es asi, ignoramos la linea    
+            for spam_exp in compilados:
+                if (spam_exp.search(word_eol[3][1:])):
+                    return xchat.EAT_ALL
 
 
 def antispam_add_cb(word, word_eol, userdata):
@@ -153,9 +145,11 @@ def antispam_add_cb(word, word_eol, userdata):
     word_eol -- array de cadenas que envia xchat a cada hook (ignorado)
     userdata -- variable opcional que se puede enviar a un hook (ignorado)
     """
-    if _CONECTADO == 1:
-        CURSOR.execute("INSERT INTO filtros VALUES (null, ?)", (word[1],))
-        CONEXIONDB.commit()
+    if auxiliar.CONECTADO == 1:
+        sql = 'INSERT INTO filtros ("id", "filtro", "creado", "usado", "veces") \
+              VALUES (null, %s, date("now"), date("now"), "1")' % word[1]
+        auxiliar.gatodb_cursor_execute(sql)
+        auxiliar.gatodb_commit()
         mensaje = "Se ha añadido '" + word[1] + "' a la lista de filtros"
         auxiliar.priv_linea(mensaje)
         del mensaje
@@ -174,10 +168,10 @@ def antispam_del_cb(word, word_eol, userdata):
     word_eol -- array de cadenas que envia xchat a cada hook
     userdata -- variable opcional que se puede enviar a un hook (ignorado)
     """
-    if _CONECTADO == 1:
-        CURSOR.execute("DELETE FROM filtros WHERE filtro IN (?)", \
-                (word_eol[1],))
-        CONEXIONDB.commit()        
+    if auxiliar.CONECTADO == 1:
+        sql = "DELETE FROM filtros WHERE filtro='%s'" % word_eol[1]
+        auxiliar.gatodb_cursor_execute(sql)
+        auxiliar.gatodb_commit()        
         mensaje = "Se ha eliminado '%s' de la lista de filtros" % word_eol[1]
         auxiliar.priv_linea(mensaje)
         del mensaje
@@ -195,19 +189,10 @@ def antispam_list_cb(word, word_eol, userdata):
     word_eol -- array de cadenas que envia xchat a cada hook (ignorado)
     userdata -- variable opcional que se puede enviar a un hook (ignorado)
     """
-    for filtro in CURSOR.execute("SELECT * FROM filtros"):
+    for filtro in auxiliar.gatodb_cursor_execute("SELECT id, filtro FROM filtros"):
         mensaje = u"Filtro %s: %s" % (filtro[0], filtro[1])
         auxiliar.priv_linea(mensaje)
-    #global filtros
-    #cuenta_lineas = 1
-    #auxiliar.priv_linea("\nLista de filtros:")
-    #for filtro in filtros[0:len(filtros)-1]:
-    #    mensaje = "Filtro %s: %s" % (cuenta_lineas, filtro)
-    #    auxiliar.priv_linea(mensaje)
-    #    cuenta_lineas = cuenta_lineas + 1
-    #auxiliar.priv_linea("")
     del mensaje
-    #del cuenta_lineas
     return xchat.EAT_ALL
 
 
@@ -217,7 +202,8 @@ def testspam_cb(word, word_eol, userdata):
     """
     userlist = xchat.get_list("users")
     goodboys = []
-    for row in CURSOR.execute("SELECT goodboy FROM goodboys"):
+    contexto_orig = xchat.find_context(server=None, channel=None)
+    for row in auxiliar.gatodb_cursor_execute("SELECT goodboy FROM goodboys"):
         goodboys.append(row[0])
     for usuario in userlist:
         if usuario.nick not in goodboys:
@@ -228,9 +214,11 @@ def testspam_cb(word, word_eol, userdata):
                 contexto = xchat.find_context(channel=usuario.nick)
             contexto.command("say %s" %auxiliar.lee_conf("protecciones", \
                     "botmensaje"))
-            CURSOR.execute("INSERT INTO goodboys VALUES (null, ?)", \
-                    (usuario.nick,))
-    CONEXIONDB.commit()
+            contexto.command("close")
+            sql = "INSERT INTO goodboys VALUES (null, %s)" % usuario.nick
+            auxiliar.gatodb_cursor_execute(sql)
+    auxiliar.gatodb_commit()
+    contexto_orig.set()
     return xchat.EAT_NONE
 
 
@@ -259,7 +247,7 @@ def unload_cb(userdata):
     userdata -- variable opcional que se puede enviar a un hook (ignorado)
     """
     # Guardamos los cambios en la base de datos
-    CONEXIONDB.commit()
+    auxiliar.gatodb_commit()
     # Desconectamos las funciones AntiSpam
     xchat.unhook(HOOKANTISPAM)
     xchat.unhook(HOOKANTIADD)
@@ -276,10 +264,22 @@ def unload_cb(userdata):
 #############################################################################
 
 # Antispam
-HOOKANTISPAM = xchat.hook_server('PRIVMSG', antispam_cb, userdata=None)
+HOOKANTISPAM = xchat.hook_server('PRIVMSG', antispam_cb, userdata=None, priority=5)
 HOOKANTIADD = xchat.hook_command('antiadd', antispam_add_cb)
 HOOKANTILIST = xchat.hook_command('antilist', antispam_list_cb)
 HOOKANTIDEL = xchat.hook_command('antidel', antispam_del_cb)
 HOOKTEST = xchat.hook_command('test2', testspam_cb)
 # Descarga del modulo
 HOOKUNLOAD = xchat.hook_unload(unload_cb)
+
+
+#############################################################################
+# Añadimos las opciones del menu
+#############################################################################
+xchat.command('menu ADD "GatoScript/-"')
+xchat.command('menu ADD "GatoScript/AntiSpam"')
+xchat.command('menu ADD "GatoScript/AntiSpam/Lista de filtros" "antilist"')
+xchat.command('menu ADD "GatoScript/AntiSpam/Añadir filtro" "getstr # \
+              "antiadd" "Filtro:""')
+xchat.command('menu ADD "GatoScript/AntiSpam/Eliminar filtro" "getstr # \
+              "antidel" "Filtro:""')
